[project]
name = "streamlit-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlb-stats-util>=0.2.0",
    "polars>=1.39.3",
    "pybaseball>=2.2.7",
    "requests>=2.32.4",
    "streamlit>=1.56.0",
    "streamlit-aggrid>=1.2.0.post1",
    "unidecode>=1.4.0",
    "yahoo-fantasy-api>=2.12.2",
]
